# sculu-rs

./: .gitignore  Cargo.toml  Makefile  README.md  rusty-tags.vi
.github/workflows/: release.yml
scripts/: best-score.py
src/: graph.rs  lib.rs  main.rs
tests/: cli.rs
tests/inputs/: AluY_5.fa  alignment.tgz  alignment.txt.orig  all_seqs.fa  blast-alignment.txt  blast-consensi-self.tsv  blast.tsv  consensi.fa  dup_consensi.fa  numbered_consensi.fa  sculu.toml  test_set.fa  two_consensi.fa
tests/inputs/instances/: AluSz.fa  AluY.fa  AluYa5.fa  AluYb8.fa  AluYb9.fa  AluYm1.fa  inst-Mdrlb1.fa  inst-xcNyc7.fa
tests/inputs/instances_100/: AluY.fa  AluYa5.fa  AluYb8.fa  AluYb9.fa  AluYm1.fa
tests/outputs/: alignment-scores.tsv  numbered_consensi.fa
