[package]
name = "sculu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.14"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.3"
format_num = "0.1.0"
homedir = "0.3.3"
itertools = "0.13.0"
kseq = "0.5.3"
log = "0.4.22"
newick = "0.11.0"
predicates = "3.1.2"
pretty_assertions = "1.4.0"
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.10.1"
which = "6.0.2"
