[package]
name = "sculu"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bio = "2.2.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.3"
homedir = "0.3.3"
itertools = "0.14.0"
kseq = "0.5.3"
log = "0.4.22"
newick = "0.11.0"
noodles-fasta = "0.50.0"
num_cpus = "1.16.0"
petgraph = "0.7.1"
rand = "0.9"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.10.1"
walkdir = "2.5.0"
which = "7"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.2"
pretty_assertions = "1.4.0"
